kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-promoter-demo
  labels:
    app: gitops-promoter-demo
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: gitops-promoter-demo
  template:
    metadata:
      labels:
        app: gitops-promoter-demo
    spec:
      containers:
      - name: gitops-promoter-demo
        image: ghcr.io/procinger/argo-git-promoter-demo:1.45.1
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "300m"
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - "[ -f /run/nginx.pid ] && test -f /proc/$(cat /run/nginx.pid)/exe"
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
