kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-promoter-demo
spec:
  ports:
    - name: gitops-promoter-demo
      port: 80
  selector:
    app: gitops-promoter-demo
